src/objects/workday_time_sheets__x.object
<CustomObject>
    <description>workday.time_sheets</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.time_sheets</externalName>
    <fields>
        <fullName>comments__c</fullName>
        <description>comments</description>
        <externalDeveloperName>comments</externalDeveloperName>
        <label>comments</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>out_reason__c</fullName>
        <description>out_reason</description>
        <externalDeveloperName>out_reason</externalDeveloperName>
        <label>out_reason</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>time_sheet_type__c</fullName>
        <description>time_sheet_type</description>
        <externalDeveloperName>time_sheet_type</externalDeveloperName>
        <label>time_sheet_type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>waived_meal_break__c</fullName>
        <description>waived_meal_break</description>
        <externalDeveloperName>waived_meal_break</externalDeveloperName>
        <label>waived_meal_break</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.time_sheets</label>
    <pluralLabel>workday.time_sheets</pluralLabel>
</CustomObject>